# docs/swagger.json
@@ -17,8 +17,47 @@
     "host": "localhost:8081",
     "basePath": "/",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "login"
+                ],
+                "summary": "login",
+                "parameters": [
+                    {
+                        "description": "login user",
+                        "name": "users",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Return All Users",
                 "consumes": [
                     "application/json"
@@ -36,6 +75,51 @@
                     }
                 }
             }
+        }
+    },
+    "definitions": {
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "description": "Age\nin: int32",
+                    "type": "integer"
+                },
+                "date_created": {
+                    "description": "DateCreated\nin: date",
+                    "type": "string"
+                },
+                "firstname": {
+                    "description": "Firstname\nin: string",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "Id\nin: int32",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "Name\nin: string",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "Password\nin: string",
+                    "type": "string"
+                },
+                "token": {
+                    "description": "Token\nin: string",
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "X-API-Key",
+            "in": "header"
+        },
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
