# domain/model/user.go
@@ -2,17 +2,26 @@ package model
 
 type User struct {
 	// Id
-	// in: int32
-	Id        int32       `json:"id"`
+	// in: int32	
+	Id        int32 `json:"id,omitempty"`
 	// Name
 	// in: string
-	Name      string     `json:"name"`
+	Name      string `json:"name,omitempty"`
 	// Firstname
 	// in: string
-	Firstname  string    `json:"firstname"`
+	Firstname string `json:"firstname,omitempty"`
 	// Age
 	// in: int32
-	Age       int32     `json:"age"`
+	Age       int32 `json:"age,omitempty"`
+	// Password
+	// in: string
+	Password    string `json:"password,omitempty"`
+	// Token
+	// in: string
+	Token       string `json:"token,omitempty"`
+	// DateCreated
+	// in: date
+	DateCreated string `json:"date_created,omitempty"`
 }
 
 func (User) TableName() string { return "users" }
